Update build file
Fixed coverage not be included by updating the build and properties files

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 # The source code for the examples can be found in this directory
 src.dir=src/main/java
-test.dir=src/test
+test.dir=src/test/java
 
 # The path to cobertura.jar
 cobertura.dir=cobertura
