--- a/build.properties
+++ b/build.properties
@@ -23,3 +23,5 @@ reports.html.dir=${reports.dir}/junit-html
 coverage.xml.dir=${reports.dir}/cobertura-xml
 coverage.summaryxml.dir=${reports.dir}/cobertura-summary-xml
 coverage.html.dir=${reports.dir}/cobertura-html
+
+# SonarQube properties
