--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project name="Junit-ANT-Cobertura" default="coverage" basedir=".">
+<project name="Junit-ANT-Cobertura" default="coverage" basedir="." xmlns:sonar="antlib:org.sonar.ant">
 
 	<description>
 		Junit test project with SonarQube and Cobertura.
@@ -15,13 +15,13 @@
 		</fileset>
 	</path>
 
-	<taskdef classpathref="cobertura.classpath" resource="tasks.properties"/>
-	
+	<taskdef classpathref="cobertura.classpath" resource="tasks.properties" />
+
 	<path id="project.classpath">
 		<fileset dir="${lib.dir}">
 			<include name="*.jar" />
 		</fileset>
-	</path>	
+	</path>
 
 	<target name="init" depends="clean">
 		<mkdir dir="${classes.dir}" />
@@ -41,14 +41,14 @@
 		<javac srcdir="${test.dir}" destdir="${classes.dir}" debug="yes">
 			<classpath refid="project.classpath" />
 			<classpath refid="cobertura.classpath" />
-		</javac>		
+		</javac>
 	</target>
 
 	<target name="instrument" depends="init,compile">
 		<!--
 			Remove the coverage data file and any old instrumentation.
 		-->
-		<delete file="cobertura.ser"/>
+		<delete file="cobertura.ser" />
 		<delete dir="${instrumented.dir}" />
 
 		<!--
@@ -134,7 +134,7 @@
 		-->
 		<cobertura-report destdir="${coverage.html.dir}">
 			<fileset dir="${src.dir}">
-				<include name="**/*.java"/>
+				<include name="**/*.java" />
 			</fileset>
 		</cobertura-report>
 	</target>
@@ -147,6 +147,29 @@
 		<delete file="cobertura.ser" />
 	</target>
 
-	<target name="coverage" depends="compile,instrument,test,coverage-report,summary-coverage-report,alternate-coverage-report" description="Compile, instrument ourself, run the tests and generate JUnit and coverage reports."/>
+	<target name="coverage" depends="compile,instrument,test,coverage-report,summary-coverage-report,alternate-coverage-report" description="Compile, instrument ourself, run the tests and generate JUnit and coverage reports." />
 
+	<!-- Define the SonarQube global properties (the most usual way is to pass these properties via the command line) -->
+	<property name="sonar.host.url" value="https://sonarcloud.io" />
+	<property name="sonar.login" value="7aaa9001337d6a0911ffbf3637eec5335810e3e7" />
+	<property name="sonar.organization" value="wudc-github" />
+	<property name="sonar.projectBaseDir" value="." />
+	<property name="sonar.junit.reportPaths" value="${sonar.projectBaseDir}/reports" />
+	<property name="sonar.projectKey" value="unit-test:sonarqube-scanner-ant" />
+	<property name="sonar.projectName" value="Junit Test Project integrated with SonarQube and Cobertura" />
+	<property name="sonar.projectVersion" value="1.0" />
+	<property name="sonar.core.codeCoveragePlugin" value="cobertura" />
+	<property name="sonar.cobertura.reportPath" value="${coverage.xml.dir}/coverage.xml" />
+
+	<target name="sonar" depends="coverage" description="Integrate this project with SonarQube">
+		<property name="sonar.sources" value="${src.dir},${test.dir}" />
+		<property name="sonar.java.binaries" value="${classes.dir}" />
+		<property name="sonar.java.libraries" value="${lib.dir}/*.jar" />
+		<taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml">
+			<classpath refid="project.classpath" />
+			<!-- put the "sonarqube-ant-task-*.jar" file in your "$HOME/.ant/lib" folder -->
+		</taskdef>
+		<!-- Execute SonarQube scanner for ANT project analysis -->
+		<sonar:sonar />
+	</target>
 </project>
