Updated build.xml and properties files.

--- a/build.properties
+++ b/build.properties
@@ -23,3 +23,8 @@ reports.html.dir=${reports.dir}/junit-html
 coverage.xml.dir=${reports.dir}/cobertura-xml
 coverage.summaryxml.dir=${reports.dir}/cobertura-summary-xml
 coverage.html.dir=${reports.dir}/cobertura-html
+
+# JaCoCo Result directory
+result.dir=target
+result.report.dir=${result.dir}/site/jacoco
+result.exec.file=${result.dir}/jacoco.exec
